--- a/src/styles.css
+++ b/src/styles.css
@@ -22,8 +22,16 @@
     width: 100px;
 }
 
+.h100 {
+    height: 100px;
+}
+
 .w140 {
     width: 140px;
+}
+
+.w200 {
+    width: 200px;
 }
 
 .avatar {
